auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teleport-auth
  namespace: vassyutovich
spec:
  selector:
    app: teleport-auth
  ports:
    - name: auth
      port: 3025
      targetPort: 3025
      protocol: TCP
  type: ClusterIP
